marvelus_examples/tests/pos/ite02.zls
(* ==== POS 3: ITE inside let (node body); per-branch checks ==== *)
let node ite_let_ok () : {(v:int) | g(v <= 0)} =
  let (foo : {v:int | v >= 0 && x(g(v >= 0))}) = 2 in
  let (z   : {v:int | v <= 0}) =
    if foo >= 0 then -1*foo else foo in
  z

let dt = 0.1 
let hybrid main () = let rec trigger = (period (dt)) in
        present (trigger) -> (let (x) = ite_let_ok () in
        (print_int x; print_newline ())) else ()
